--- a/Core/TomPIT.Sdk/TomPIT.Sdk.csproj
+++ b/Core/TomPIT.Sdk/TomPIT.Sdk.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.12" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="3.3.1" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.5.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
