--- a/Development/TomPIT.Development.UI/compilerconfig.json
+++ b/Development/TomPIT.Development.UI/compilerconfig.json
@@ -14,5 +14,9 @@
   {
     "outputFile": "wwwroot/Assets/Styles/bootstrap/bootstrap.css",
     "inputFile": "wwwroot/Assets/Styles/bootstrap/bootstrap.scss"
+  },
+  {
+    "outputFile": "wwwroot/Assets/Styles/designers.css",
+    "inputFile": "wwwroot/Assets/Styles/designers.less"
   }
 ]
