--- a/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
+++ b/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <AssemblyVersion>1.1.1124.1</AssemblyVersion>
-    <FileVersion>1.1.1124.1</FileVersion>
-    <Version>1.1.1124.1</Version>
+    <AssemblyVersion>1.1.1128.1</AssemblyVersion>
+    <FileVersion>1.1.1128.1</FileVersion>
+    <Version>1.1.1128.1</Version>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
