--- a/App/TomPIT.App.UI/App.csproj
+++ b/App/TomPIT.App.UI/App.csproj
@@ -11,10 +11,13 @@
     <AssemblyName>TomPIT.Experience.App</AssemblyName>
     <RootNamespace>TomPIT.App</RootNamespace>
     <CopyRefAssembliesToPublishDirectory>true</CopyRefAssembliesToPublishDirectory>
-    <AssemblyVersion>2.1.217.2</AssemblyVersion>
-    <FileVersion>2.1.217.2</FileVersion>
-    <Version>2.1.217.2</Version>
+    <AssemblyVersion>2.1.220.1</AssemblyVersion>
+    <FileVersion>2.1.220.1</FileVersion>
+    <Version>2.1.220.1</Version>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="UI\RouteParameter.cs" />
+  </ItemGroup>
   <ItemGroup>
     <Content Remove="compilerconfig.json" />
   </ItemGroup>
@@ -24,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="compilerconfig.json" />
+    <None Include="UI\RouteParameter.cs" />
     <None Include="wwwroot\Assets\Libraries\Cldr\0.5.0\cldr\event.js" />
     <None Include="wwwroot\Assets\Libraries\Cldr\0.5.0\cldr\supplemental.js" />
     <None Include="wwwroot\Assets\Libraries\Cldr\0.5.0\cldr\unresolved.js" />
