--- a/Core/TomPIT.Sdk/TomPIT.Sdk.csproj
+++ b/Core/TomPIT.Sdk/TomPIT.Sdk.csproj
@@ -12,7 +12,8 @@
   </PropertyGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>  <ItemGroup>
+  </ItemGroup>  
+  <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.22" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="3.4.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.4.0" />
