--- a/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
+++ b/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <AssemblyVersion>2.1.403.3</AssemblyVersion>
-    <FileVersion>2.1.403.3</FileVersion>
-    <Version>2.1.403.3</Version>
+    <AssemblyVersion>2.1.407.1</AssemblyVersion>
+    <FileVersion>2.1.407.1</FileVersion>
+    <Version>2.1.407.1</Version>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
@@ -12,18 +12,21 @@
     <RootNamespace>TomPIT.MicroServices.Reporting</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="bundleconfig.json" />
-    <None Remove="wwwroot\assets\reporting.design.min.css" />
-    <None Remove="wwwroot\assets\reporting.design.min.js" />
-    <None Remove="wwwroot\assets\reporting.min.css" />
-    <None Remove="wwwroot\assets\reporting.min.js" />
+    <Content Remove="wwwroot\Assets\reporting.design.min.css" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="wwwroot\assets\reporting.design.min.css" />
-    <EmbeddedResource Include="wwwroot\assets\reporting.design.min.js" />
-    <EmbeddedResource Include="wwwroot\assets\reporting.min.css" />
-    <EmbeddedResource Include="wwwroot\assets\reporting.min.js" />
-    <EmbeddedResource Include="wwwroot\assets\ko.min.js" />
+    <None Remove="bundleconfig.json" />
+    <None Remove="wwwroot\Assets\reporting.design.min.css" />
+    <None Remove="wwwroot\Assets\reporting.design.min.js" />
+    <None Remove="wwwroot\Assets\reporting.min.css" />
+    <None Remove="wwwroot\Assets\reporting.min.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="wwwroot\Assets\reporting.design.min.css" />
+    <EmbeddedResource Include="wwwroot\Assets\reporting.design.min.js" />
+    <EmbeddedResource Include="wwwroot\Assets\reporting.min.css" />
+    <EmbeddedResource Include="wwwroot\Assets\reporting.min.js" />
+    <EmbeddedResource Include="wwwroot\Assets\ko.min.js" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DevExpress.AspNetCore.Reporting" Version="19.2.3" />
