--- a/Development/TomPIT.Development.UI/bundleconfig.json
+++ b/Development/TomPIT.Development.UI/bundleconfig.json
@@ -1,15 +1,15 @@
 ﻿[
   {
-    "outputFileName": "wwwroot/assets/styles.min.css",
+    "outputFileName": "wwwroot/Assets/styles.min.css",
     "inputFiles": [
-      "wwwroot/assets/fonts/opensans/opensans.css",
-      "wwwroot/assets/styles/bootstrap/bootstrap.css",
-      "wwwroot/assets/libraries/devextreme/Latest/dx.common.css",
+      "wwwroot/Assets/Fonts/OpenSans/opensans.css",
+      "wwwroot/Assets/Styles/bootstrap/bootstrap.css",
+      "wwwroot/Assets/Libraries/DevExtreme/Latest/dx.common.css",
       //"wwwroot/assets/libraries/devextreme/Latest/dx.light.css",
-      "wwwroot/assets/libraries/devextreme/Latest/dx.material.blue.light.css",
-      "wwwroot/assets/styles/development.css",
-      "wwwroot/assets/styles/tompit.css",
-      "wwwroot/assets/styles/designers.css"
+      "wwwroot/Assets/Libraries/DevExtreme/Latest/dx.material.blue.light.css",
+      "wwwroot/Assets/Styles/development.css",
+      "wwwroot/Assets/Styles/tompit.css",
+      "wwwroot/Assets/Styles/designers.css"
     ],
     "minify": {
       "enabled": true,
@@ -18,10 +18,10 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/idemap.min.css",
+    "outputFileName": "wwwroot/Assets/idemap.min.css",
     "inputFiles": [
       //"wwwroot/assets/styles/bootstrap/bootstrap.css",
-      "wwwroot/assets/styles/fontawesome.css"
+      "wwwroot/Assets/Styles/fontawesome.css"
     ],
     "minify": {
       "enabled": true,
@@ -30,9 +30,9 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/iot.min.css",
+    "outputFileName": "wwwroot/Assets/iot.min.css",
     "inputFiles": [
-      "wwwroot/assets/styles/iot.css"
+      "wwwroot/Assets/Styles/iot.css"
     ],
     "minify": {
       "enabled": true,
@@ -41,9 +41,9 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/ide.min.css",
+    "outputFileName": "wwwroot/Assets/ide.min.css",
     "inputFiles": [
-      "wwwroot/assets/styles/ide.css"
+      "wwwroot/Assets/Styles/ide.css"
     ],
     "minify": {
       "enabled": true,
@@ -52,27 +52,27 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/scripts.min.js",
+    "outputFileName": "wwwroot/Assets/scripts.min.js",
     "inputFiles": [
-      "wwwroot/assets/scripts/jquery.js",
-      "wwwroot/assets/scripts/tether.js",
-      "wwwroot/assets/scripts/popper.js",
-      "wwwroot/assets/scripts/tooltip.js",
-      "wwwroot/assets/scripts/bootstrap.js",
-      "wwwroot/assets/scripts/jquery-ui-1.12.1.js",
-      "wwwroot/assets/libraries/Knockout/Latest/knockout.js",
-      "wwwroot/assets/libraries/devextreme/Latest/dx.all.js",
-      "wwwroot/assets/libraries/underscore/1.9.1/underscore.js",
-      "wwwroot/assets/scripts/ajax.js",
-      "wwwroot/assets/scripts/progress.js",
-      "wwwroot/assets/scripts/toastr.js",
-      "wwwroot/assets/scripts/tompit.js",
-      "wwwroot/assets/scripts/jquery.signalR-2.2.3.min.js",
-      "wwwroot/assets/scripts/timer.js",
-      "wwwroot/assets/scripts/moment.js",
-      "wwwroot/assets/scripts/table.js",
-      "wwwroot/assets/scripts/form.js",
-      "wwwroot/assets/scripts/jquery.number.js"
+      "wwwroot/Assets/Scripts/jquery.js",
+      "wwwroot/Assets/Scripts/tether.js",
+      "wwwroot/Assets/Scripts/popper.js",
+      "wwwroot/Assets/Scripts/tooltip.js",
+      "wwwroot/Assets/Scripts/bootstrap.js",
+      "wwwroot/Assets/Scripts/jquery-ui-1.12.1.js",
+      "wwwroot/Assets/Libraries/Knockout/Latest/knockout.js",
+      "wwwroot/Assets/Libraries/DevExtreme/Latest/dx.all.js",
+      "wwwroot/Assets/Libraries/Underscore/1.9.1/underscore.js",
+      "wwwroot/Assets/Scripts/ajax.js",
+      "wwwroot/Assets/Scripts/progress.js",
+      "wwwroot/Assets/Scripts/toastr.js",
+      "wwwroot/Assets/Scripts/tompit.js",
+      "wwwroot/Assets/Scripts/jquery.signalR-2.2.3.min.js",
+      "wwwroot/Assets/Scripts/timer.js",
+      "wwwroot/Assets/Scripts/moment.js",
+      "wwwroot/Assets/Scripts/table.js",
+      "wwwroot/Assets/Scripts/form.js",
+      "wwwroot/Assets/Scripts/jquery.number.js"
     ],
     "minify": {
       "enabled": true,
@@ -81,9 +81,9 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/fonts.min.js",
+    "outputFileName": "wwwroot/Assets/fonts.min.js",
     "inputFiles": [
-      "wwwroot/assets/scripts/fontawesome-all.js"
+      "wwwroot/Assets/Scripts/fontawesome-all.js"
     ],
     "minify": {
       "enabled": true,
@@ -92,9 +92,9 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/scripts.foot.min.js",
+    "outputFileName": "wwwroot/Assets/scripts.foot.min.js",
     "inputFiles": [
-      "wwwroot/assets/scripts/foot.js"
+      "wwwroot/Assets/Scripts/foot.js"
     ],
     "minify": {
       "enabled": true,
@@ -103,10 +103,10 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/ide.min.js",
+    "outputFileName": "wwwroot/Assets/ide.min.js",
     "inputFiles": [
-      "wwwroot/assets/scripts/ide.js",
-      "wwwroot/assets/scripts/textEditor.js"
+      "wwwroot/Assets/Scripts/ide.js",
+      "wwwroot/Assets/Scripts/textEditor.js"
     ],
     "minify": {
       "enabled": true,
@@ -115,9 +115,9 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/environment.min.js",
+    "outputFileName": "wwwroot/Assets/environment.min.js",
     "inputFiles": [
-      "wwwroot/assets/scripts/environment.js"
+      "wwwroot/Assets/Scripts/environment.js"
     ],
     "minify": {
       "enabled": true,
