--- a/App/TomPIT.App.UI/compilerconfig.json
+++ b/App/TomPIT.App.UI/compilerconfig.json
@@ -10,5 +10,9 @@
   {
     "outputFile": "wwwroot/Assets/Styles/bootstrap/bootstrap.css",
     "inputFile": "wwwroot/Assets/Styles/bootstrap/bootstrap.scss"
+  },
+  {
+    "outputFile": "wwwroot/Assets/scripts.min.es5.js",
+    "inputFile": "wwwroot/Assets/scripts.min.js"
   }
 ]
