--- a/App/TomPIT.App.UI/App.csproj
+++ b/App/TomPIT.App.UI/App.csproj
@@ -85,6 +85,6 @@
     </Content>
   </ItemGroup>
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Condition="'$(OS)' == 'Windows_NT'" Command="IF EXIST &quot;$(SolutionDir)\.vs\config\applicationhost.config&quot; (pushd $(SolutionDir)\.vs\config\ &amp; copy /b applicationhost.config +,, &amp; popd)" />
+    <Exec Condition="'$(OS)' == 'Windows_NT'" Command="REM IF EXIST &quot;$(SolutionDir)\.vs\config\applicationhost.config&quot; (pushd $(SolutionDir)\.vs\config\ &amp; copy /b applicationhost.config +,, &amp; popd)" />
   </Target>
 </Project>
