--- a/App/TomPIT.App.UI/Properties/launchSettings.json
+++ b/App/TomPIT.App.UI/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:44103/"
+      "applicationUrl": "http://0.0.0.0:44103/"
     }
   }
 }
