--- a/Printing/TomPIT.Connected.Printing.Client/App.Release.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Release.config
@@ -1,40 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <configSections>
-    <section name="printers" type="TomPIT.Connected.Printing.Client.Configuration.PrintersConfigurationHandler, TomPIT.Connected.Printing.Client" />
-  </configSections>
-  <appSettings>
-    <add key="cdnUrl" value="http://sys-app/common/cdn/" />
-    <add key="token" value="0f69745a-c65f-437b-a025-5ed52e5dca72" />
-
-    <!-- loggingLevel can be "off" < "fatal" < "error" < "warning" < "info" < "debug" < "trace" < "all" -->
-    <add key="loggingLevel" value="error" />
-
-    <!-- exceptionLoggingLevel can be "off", "errorMessage" or "stackTrace" -->
-    <add key="exceptionLoggingLevel" value="errorMessage" />
-
-    <!-- the timeout of a single print job in seconds -->
-    <add key="printJobTimeout" value="30" />
-  </appSettings>
-  <printers>
-    <printer  name="\\GRBKRIVLJENJE1\NalepkeKRIVLJENJE"
-              resourceName="Honeywell PC42t (203 dpi) - DP"/>
-    <printer  name="\\skladisce1\NalepkeSKLADISCE"
-              resourceName="Honeywell SKLADIŠČE"/>
-    <printer  name="NalepkeLOCAL"
-              resourceName="Nalepke LOCAL"/>
-    <printer  name="NalepkePHOENIX"
-              resourceName="Nalepke PHOENIX"/>
-    <printer  name="PisarneXeroxB1025MFP"
-              resourceName="Xerox B1025 Multifunction Printer"/>
-    <printer  name="PisarnaLJM426fdn"
-              resourceName="Pisarna LJM"/>
-    <printer  name="ProizvodnjaLJM130fw"
-              resourceName="Proizvodnja LJM"/>
-    <printer  name="\\skladisce1.gorenc.lan\SkladisceLJM402dn"
-              resourceName="Skladišče LJM"/>
-    <printer  name="\\grblaser-3015\NalepkeAXEL"
-              resourceName="Nalepke AXEL"/>
-  </printers>
-
+	<configSections>
+		<section name="printers" type="TomPIT.Connected.Printing.Client.Configuration.PrintersConfigurationHandler, TomPIT.Connected.Printing.Client" />
+	</configSections>
+	<appSettings>
+		<!--Url to CDN. Get from Sys configuration.-->
+		<add key="cdnUrl" value="http://sys-app/core/cdn/" />
+		<!--Printing token, created for user with sufficient privileges-->
+		<add key="token" value="d69c8a22-6368-42c8-8339-3b2a7d87b366" />
+		<!-- loggingLevel can be "off" < "fatal" < "error" < "warning" < "info" < "debug" < "trace" < "all" -->
+		<add key="loggingLevel" value="all" />
+		<!-- exceptionLoggingLevel can be "off", "errorMessage" or "stackTrace" -->
+		<add key="exceptionLoggingLevel" value="stackTrace" />
+		<!-- the timeout of a single print job in seconds -->
+		<add key="printJobTimeout" value="30" />
+	</appSettings>
+	<printers>
+		<printer name="PrinterNameVisibleToRelatedPC" resourceName="NameOfPrinterResourceRegisteredInTomPITSystem"/>
+	</printers>
 </configuration>
