--- a/Development/TomPIT.Templates.Application.Design/TomPIT.MicroServices.Design.csproj
+++ b/Development/TomPIT.Templates.Application.Design/TomPIT.MicroServices.Design.csproj
@@ -22,16 +22,38 @@
     <None Remove="CreateHandlers\Connection.csx" />
     <None Remove="CreateHandlers\Templates\Api.txt" />
     <None Remove="CreateHandlers\Templates\ApiOperation.txt" />
+    <None Remove="CreateHandlers\Templates\DependencyInjection.txt" />
     <None Remove="CreateHandlers\Templates\DistributedEvent.txt" />
+    <None Remove="CreateHandlers\Templates\EventBinding.txt" />
+    <None Remove="CreateHandlers\Templates\HostedWorker.txt" />
+    <None Remove="CreateHandlers\Templates\IocContainerOperation.txt" />
+    <None Remove="CreateHandlers\Templates\IocEndpoint.txt" />
+    <None Remove="CreateHandlers\Templates\Management.txt" />
     <None Remove="CreateHandlers\Templates\MicroServiceInfo.txt" />
     <None Remove="CreateHandlers\Templates\Model.txt" />
     <None Remove="CreateHandlers\Templates\Partial.txt" />
+    <None Remove="CreateHandlers\Templates\QueueWorker.txt" />
+    <None Remove="CreateHandlers\Templates\Runtime.txt" />
     <None Remove="CreateHandlers\Templates\ScriptBundle.txt" />
     <None Remove="CreateHandlers\Templates\ScriptBundlePartial.txt" />
     <None Remove="CreateHandlers\Templates\ScriptBundleView.txt" />
+    <None Remove="CreateHandlers\Templates\Settings.txt" />
+    <None Remove="CreateHandlers\Templates\Sitemap.txt" />
+    <None Remove="CreateHandlers\Templates\UiDependencyInjection.txt" />
     <None Remove="CreateHandlers\Templates\View.txt" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="CreateHandlers\Templates\EventBinding.txt" />
+    <EmbeddedResource Include="CreateHandlers\Templates\Management.txt" />
+    <EmbeddedResource Include="CreateHandlers\Templates\Settings.txt" />
+    <EmbeddedResource Include="CreateHandlers\Templates\UiDependencyInjection.txt" />
+    <EmbeddedResource Include="CreateHandlers\Templates\DependencyInjection.txt" />
+    <EmbeddedResource Include="CreateHandlers\Templates\Runtime.txt" />
+    <EmbeddedResource Include="CreateHandlers\Templates\SiteMap.txt" />
+    <EmbeddedResource Include="CreateHandlers\Templates\QueueWorker.txt" />
+    <EmbeddedResource Include="CreateHandlers\Templates\HostedWorker.txt" />
+    <EmbeddedResource Include="CreateHandlers\Templates\IocEndpoint.txt" />
+    <EmbeddedResource Include="CreateHandlers\Templates\IocContainerOperation.txt" />
     <EmbeddedResource Include="CreateHandlers\Templates\Api.txt" />
     <EmbeddedResource Include="CreateHandlers\Templates\MicroServiceInfo.txt" />
     <EmbeddedResource Include="CreateHandlers\Templates\ScriptBundlePartial.txt" />
