--- a/Development/TomPIT.Templates.Application.Design/TomPIT.MicroServices.Design.csproj
+++ b/Development/TomPIT.Templates.Application.Design/TomPIT.MicroServices.Design.csproj
@@ -25,6 +25,7 @@
     <None Remove="CreateHandlers\Templates\DependencyInjection.txt" />
     <None Remove="CreateHandlers\Templates\DistributedEvent.txt" />
     <None Remove="CreateHandlers\Templates\EventBinding.txt" />
+    <None Remove="CreateHandlers\Templates\HostedService.txt" />
     <None Remove="CreateHandlers\Templates\HostedWorker.txt" />
     <None Remove="CreateHandlers\Templates\IocContainerOperation.txt" />
     <None Remove="CreateHandlers\Templates\IocEndpoint.txt" />
@@ -44,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="CreateHandlers\Templates\EventBinding.txt" />
+    <EmbeddedResource Include="CreateHandlers\Templates\HostedService.txt" />
     <EmbeddedResource Include="CreateHandlers\Templates\Management.txt" />
     <EmbeddedResource Include="CreateHandlers\Templates\Settings.txt" />
     <EmbeddedResource Include="CreateHandlers\Templates\UiDependencyInjection.txt" />
