--- a/Management/TomPIT.Management.UI/Management.csproj
+++ b/Management/TomPIT.Management.UI/Management.csproj
@@ -89,6 +89,7 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
 		<PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.5" />
 	</ItemGroup>
 	<ItemGroup>
 		<Content Update="Views\Ide\Designers\Scheduler.cshtml">
